--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-cayman
-title: hello
+theme: Demo Website - App
+title: This demo site will fallback to an offline page if no network is available
